# NN_project

./: .gitignore  README.md  app_gradio.py  inference_ui.py  pyproject.toml  run_pipeline.py
config/: config.yml
data_pipeline/: __init__.py  data_generator.py  data_loader.py  preprocessor.py
evaluation/: evaluator.py
model/: __init__.py  activations.py  initializer.py  layer.py  loss.py  mlp.py  optimizers.py  scheduler.py
pipeline/: __init__.py  pipeline.py
utils/: __init__.py  logger.py
